[gd_scene load_steps=3 format=3 uid="uid://yfr4b52ar72r"]

[ext_resource type="Script" path="res://scripts/pantalla_final.gd" id="1_4ymw7"]
[ext_resource type="FontFile" uid="uid://bo4ise0pw8yvk" path="res://img/arcade-classic/ArcadeClassic.ttf" id="2_2pd3q"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4ymw7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1252.0
offset_bottom = 667.0
color = Color(0.890117, 0.915383, 0.430275, 1)

[node name="Label" type="Label" parent="."]
modulate = Color(0.113725, 0, 0.0313726, 1)
offset_left = 231.0
offset_top = 163.0
offset_right = 993.0
offset_bottom = 315.0
theme_override_fonts/font = ExtResource("2_2pd3q")
theme_override_font_sizes/font_size = 150
text = "HAS GANADO"

[node name="Button" type="Button" parent="."]
offset_left = 790.0
offset_top = 477.0
offset_right = 864.0
offset_bottom = 516.0
theme_override_fonts/font = ExtResource("2_2pd3q")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="Button2" type="Button" parent="."]
offset_left = 274.0
offset_top = 476.0
offset_right = 434.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("2_2pd3q")
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="Label2" type="Label" parent="."]
modulate = Color(0.00392157, 0.0980392, 0.0156863, 1)
offset_left = 495.0
offset_top = 336.0
offset_right = 674.0
offset_bottom = 362.0
theme_override_fonts/font = ExtResource("2_2pd3q")
theme_override_font_sizes/font_size = 25
text = "aaaaaaaaaaaaa"

[node name="Label3" type="Label" parent="."]
modulate = Color(0.0188678, 0.0448295, 0.0267435, 1)
offset_left = 496.0
offset_top = 373.0
offset_right = 675.0
offset_bottom = 416.0
theme_override_fonts/font = ExtResource("2_2pd3q")
theme_override_font_sizes/font_size = 25
text = "eeeeeeeeeeeee"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
